<resources>
    <string name="app_name">MyFinancePal</string>
    <string name="title_budgets">Budgets</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_goals">Goals</string>
    <string name="budget_button">New Budget</string>
    <string name="transaction_button">New Transaction</string>
    <string name="goal_button">New Goal</string>
    <string name="budget_name">Budget Name</string>
    <string name="transaction_name">Transaction Name</string>
    <string name="goal_name">Goal Name</string>
    <string name="budget_amt">Budget Amount</string>
    <string name="transaction_amt">Transaction Amount</string>
    <string name="goal_amt">Goal Amount</string>
    <string name="confirm">Confirm</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="transBudget">Budget</string>
</resources>
