<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myfinancepal.ui.home.HomeFragment"
        android:label="@string/title_budgets"
        tools:layout="@layout/fragment_budgets" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myfinancepal.ui.dashboard.DashboardFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myfinancepal.ui.notifications.NotificationsFragment"
        android:label="@string/title_goals"
        tools:layout="@layout/fragment_goals" />
</navigation>